--- a/ar.lproj/Main.strings
+++ b/ar.lproj/Main.strings
@@ -129,7 +129,7 @@
     "EMOJI_BUTTONS" = "أزرار برموز تعبيرية";
     "TRACKPAD" = "لوحة تعقب النص";
     "TRACKPAD_FOOTER" = "• سرعة المؤشر الافتراضية = ١٠.";
-    "TRACKPAD_TIPS_FOOTER" = "• ضغطة واحدة للوحة التتبع: تحديد.\n• ضغطة مطولة للوحة التتبع: تحديد الكل.\n• ضغطة واحدة على زر الترجمة: عكس اللغات.\n• ضغطة مطولة على اللغات المفضلة: كل اللغات.\n";
+    "TRACKPAD_TIPS_FOOTER" = "• ضغطة واحدة للوحة التتبع: تحديد.\n• ضغطة مطولة للوحة التتبع: تحديد الكل.\n• ضغطة مطولة على زر الترجمة: عكس اللغات.\n• ضغطة مطولة على اللغات المفضلة: كل اللغات.\n";
     "CURSOR_SPEED" = "سرعة المؤشر: (%i)";
     "CURSOR_SPEED_SINGULAR" = "سرعة المؤشر: (١)";
     "TRANSLATE" = "الترجمة";
