--- a/ar.lproj/Main.strings
+++ b/ar.lproj/Main.strings
@@ -23,7 +23,7 @@
     "APP_COLOR_FOOTER" = "• لون التطبيق: هذا الخيار سوف يستخدم لون ايقونة التطبيق.";
     "CUSTOM_COLOR" = "لون مخصص";
     "FONT" = "الخط";
-    "KEYBOARD_FONT_SIZE_FOOTER" = "• حجم خط لوحة المفاتيح: يتطلب هذا الخيار إعاة تشغيل سريع لتطبيق التغييرات.";
+    "KEYBOARD_FONT_SIZE_FOOTER" = "• حجم خط لوحة المفاتيح: يتطلب هذا الخيار إعادة تشغيل سريع لتطبيق التغييرات.";
     "CUSTOM_FONT_SIZE" = "حجم خط مخصص";
     "KEYBOARD_FONT_SIZE" = "حجم خط لوحة المفاتيح: %i";
     "KEYBOARD_FONT_SIZE_SINGULAR" = "حجم خط لوحة المفاتيح: (١)";
