--- a/ar.lproj/Bottom_Bar_Offsets.strings
+++ b/ar.lproj/Bottom_Bar_Offsets.strings
@@ -8,5 +8,5 @@
     "RIGHT_OFFSET_FOOTER" = "• الإزاحة اليمنى الإفتراضية = -٦٥";
     "BOTTOM_OFFSET" = "الإزاحة للأسفل";
     "BOTTOM_OFFSET_LABEL" = "الإزاحة للأسفل:";
-    "BOTTOM_OFFSET_FOOTER" = "• الإزاحة السفلية الإفتراضية = ٠:";
+    "BOTTOM_OFFSET_FOOTER" = "• الإزاحة السفلية الإفتراضية = ٠";
 }
