--- a/ar.lproj/Main.strings
+++ b/ar.lproj/Main.strings
@@ -3,7 +3,7 @@
     "GLOBAL_SWITCH" = "المفتاح الرئيسي";
     "RESPRING_FOOTER" = "إعادة تشغيل سريع لتطبيق الإعدادات.";
     "ENABLED_SWITCH" = "تمكين";
-    "RESPRING_MESSAGE" = "هل تريد حقاً مسح ذاكرة التخزين المؤقتة للوحة المافتيح وإعادة تشغيل سريع؟";
+    "RESPRING_MESSAGE" = "هل تريد حقاً مسح ذاكرة التخزين المؤقتة للوحة المفاتيح وإعادة تشغيل سريع؟";
     "CONFIRM" = "تأكيد";
     "CANCEL" = "إلغاء";
     "RESET_MESSAGE" = "هل تريد حقاً إعادة تعيين جميع الإعدادات؟";
@@ -23,7 +23,7 @@
     "APP_COLOR_FOOTER" = "• لون التطبيق: هذا الخيار سوف يستخدم لون ايقونة التطبيق.";
     "CUSTOM_COLOR" = "لون مخصص";
     "FONT" = "الخط";
-    "KEYBOARD_FONT_SIZE_FOOTER" = "• حجم خط لوحة المفاتيح: يتطلب هذا الخيار إعادة تشغيل سريع لتطبيق التغييرات.";
+    "KEYBOARD_FONT_SIZE_FOOTER" = "• حجم خط لوحة المفاتيح: يتطلب هذا الخيار إعاة تشغيل سريع لتطبيق التغييرات.";
     "CUSTOM_FONT_SIZE" = "حجم خط مخصص";
     "KEYBOARD_FONT_SIZE" = "حجم خط لوحة المفاتيح: %i";
     "KEYBOARD_FONT_SIZE_SINGULAR" = "حجم خط لوحة المفاتيح: (١)";
@@ -32,12 +32,12 @@
     "KEYS_TEXT" = "نص لوحة المفاتيح";
     "KEYS_TEXT_COLOR" = "لون نص لوحة المفاتيح";
     "DEFAULT" = "إفتراضي";
-    "RGB_KEY_TEXT" = "ألوان Razer Chroma RGB (لنص لوحة المفاتيح)";
-    "RGB_KEY_TEXT_CAPS" = "ألوان Razer Chroma RGB (نص+أغطية لوحة المفاتيح)";
+    "RGB_KEY_TEXT" = "ألوان RGB (لنص لوحة المفاتيح)";
+    "RGB_KEY_TEXT_CAPS" = "ألوان RGB (نص+أغطية لوحة المفاتيح)";
     "BASED_ON_APP_ICON" = "مطابق للون أيقونة التطبيق";
     "RGB" = "ألوان RGB";
-    "RAZER_RGB" = "ألوان Razer Chroma RGB";
-    "DEFAULT_SPEED_VALUE" = "• قيمة السرعة الإفتراضية: ٥٠ملي ثانية";
+    "RAZER_RGB" = "ألوان RGB";
+    "DEFAULT_SPEED_VALUE" = "• قيمة السرعة الإفتراضية: ٥٠ ملي ثانية";
     "ANIMATION_STYLE" = "نمط الحركة";
     "WAVE" = "تموج";
     "SPECTRUM" = "طيف";
@@ -116,11 +116,11 @@
     "PASTE_SHORTCUT" = "إختصار اللصق";
     "PASTE_AND_GO_IN_SAFARI" = "إلصق و إذهب في متصفح السفاري";
     "LONG_PRESS_FUNC_HEADER" = "الوظائف الإفتراضية للضغط المطول لكل إختصار:";
-    "LONG_PRESS_FUNC_FOOTER" = "• تبديل شريط التنبؤ: تبديل الشريط السفلي.\n• تبديل الشريط السفلي: تبديل شريط التنبؤ.\n• الترجمة: عكس اللغة.\n• كل اللغات: لغات مفضلة.\n• لغات مفضلة : كل اللغات.\n• نسخ: نسخ كل النص.\n• لصق: مسح الكل و لصق.\n• قص: قص كل النص.\n• تحديد: تحديد الكل.\n• حدد الكل: تحديد اخر كلمة.\n• حذف: حذف الكل.\n• تراجع: إستعادة.\n• إستعادة: تراجع.\n• تكبير أول حرف: تحديد الكل وتكبير لأول حرف.\n• الأحرف الكبيرة: حدد الكل وتكبير الحروف.\n• أحرف صغيرة: حدد الكل وتصغير للحروف.\n• إغلاق لوحة المفاتيح: تبديل اللغة.\n• اللغة: Emojis لوحة مفاتيح الرموز التعبيرية.\n• الرموز التعبيرية: تبديل اللغة.\n• بداية السطر: بداية المستند.\n• نهاية السطر: نهاية المستند.\n• بداية المستند: نهاية السطر.\n• نهاية المستند: بداية السطر.\n• تحريك المؤشر لأسفل: تحريك المؤشر لأعلى.\n• تحريك المؤشر لأعلى: تحريك المؤشر لأسفل.\n• تحريك المؤشر لليسار: تحريك المؤشر لليمين.\n• تحريك المؤشر لليمين: تحريك المؤشر لليسار.\n• الكلمة السابقة: الكلمة التالية.\n• الكلمة التالية: الكلمة السابقة.\n• ترجمة: حدد الكل وترجم.\n";
+    "LONG_PRESS_FUNC_FOOTER" = "• تبديل شريط التنبؤ: تبديل الشريط السفلي.\n• تبديل الشريط السفلي: تبديل شريط التنبؤ.\n• الترجمة: عكس اللغة.\n• كل اللغات: لغات مفضلة.\n• لغات مفضلة : كل اللغات.\n• نسخ: نسخ كل النص.\n• لصق: مسح الكل و لصق.\n• قص: قص كل النص.\n• تحديد: تحديد الكل.\n• حدد الكل: تحديد اخر كلمة.\n• حذف: حذف الكل.\n• تراجع: إستعادة.\n• إستعادة: تراجع.\n• تكبير أول حرف: تحديد الكل وتكبير لأول حرف.\n• الأحرف الكبيرة: حدد الكل وتكبير الحروف.\n• أحرف صغيرة: حدد الكل وتصغير للحروف.\n• إغلاق لوحة المفاتيح: تبديل اللغة.\n• اللغة: Emojis لوحة مفاتيح الرموز التعبيرية.\n• الرموز التعبيرية: تبديل اللغة.\n• بداية السطر: بداية المستند.\n• نهاية السطر: نهاية المستند.\n• بداية المستند: نهاية السطر.\n• نهاية المستند: بداية السطر.\n• تحريك المؤشر لأسفل: تحريك المؤشر لأعلى.\n• تحريك المؤشر لأعلى: تحريك المؤشر لأسفل.\n• تحريك المؤشر لليسار: تحريك المؤشر لليمين.\n• تحريك المؤشر لليمين: تحريك المؤشر لليسار.\n• الكلمة السابقة: الكلمة التالية.\n• الكلمة التالية: الكلمة السابقة.\n• إتجاه النص من اليمين لليسار: إتجاه النص من اليسار لليمين.\n• إتجاه النص من اليسار لليمين: إتجاه النص من اليمين لليسار.\n• مشاركة: تحديد الكل ومشاركة.\n\n";
     "LONG_PRESS_ACTION" = "حركة الضغط المطول";
     "KEYBOARD_SHORTCUTS" = "إختصارات لوحة المفاتيح";
     "TIPS_HEADER" = "نصائح:";
-    "KEYBOARD_SHORTCUTS_TIPS_FOOTER" = "• الضغط المطول على مفتاح من لوحة المفاتيح لتنشيط أي من هذه الإختصارات.\n• يمكنك إستخدام أكثر من حرف لأكثر من لغة لتنشيط نفس الإختصار، مثال: إذا استخدمت \"ن س\" في \"النسخ\" بالتالي إختصار النسخ سيتم بالضغط المطول على كل من حرف \"ن\" او \"س\".\n";
+    "KEYBOARD_SHORTCUTS_TIPS_FOOTER" = "• الضغط المطول على أي مفتاح من لوحة المفاتيح لتنشيط أي من هذه الإختصارات.\n• يمكنك إستخدام أكثر من حرف لأكثر من لغة لتنشيط نفس الإختصار، مثال: إذا استخدمت \"ن س\" في \"النسخ\" بالتالي إختصار النسخ سيتم بالضغط المطول على كل من حرف \"ن\" او \"س\".\n";
     "ALL_SHORTCUTS" = "كل الإختصارات";
     "NUMBERS" = "الأرقام";
     "NUMBERS_FOOTER" = "• حجم الخط الإفتراضي = ٢٤.";
@@ -167,26 +167,26 @@
     "BUTTON_SIZE_SINGULAR" = "حجم الزر: (١)";
     "HIDE_BUTTON" = "إخفاء الزر";
     "DICTATION" = "الإملاء الصوتي";
-    "DICTATION_FOOTER" = "• استبدال زر الإملاء الصوتي بأي زر آخر.\n• حجم الزر الإفتراضي = ٢٥.\ملاحظة: لا يمكن تغيير حجم زر الإملاء الصوتي الإفتراضي.\n";
+    "DICTATION_FOOTER" = "• استبدال زر الإملاء الصوتي بأي زر آخر.\n• حجم الزر الإفتراضي = ٢٥.\nملاحظة: لا يمكن تغيير حجم زر الإملاء الصوتي الإفتراضي.\n";
     "DICTATION_COLOR_FOOTER" = "• لون التطبيق: هذا الخيار سوف يستخدم لون ايقونة التطبيق.\n• ألوان RGB تعمل فقط مع زر الإملاء الصوتي.";
     "OTHERS" = "أخرى";
     "TOAST_MESSAGE" = "Toast رسالة";
-    "TOAST_MESSAGE_FOOTER" = "• هذا الخيار سوف يُظهر رسالة صغيرة في وسط الشاشة عند الضغط على اختصار.";
+    "TOAST_MESSAGE_FOOTER" = "• هذا الخيار سوف يُظهر رسالة صغيرة في وسط الشاشة عند الضغط على أي إختصار.";
     "TOAST_MESSAGE_SWITCH" = "إظهار رسالة Toast";
-    "FEEDBACK_TYPE" = "نوع ردة فعل النقر";
-    "TAPTIC_ENGINE" = "محرك النقر Taptic";
-    "HAPTIC_ENGINE" = "محرك النقر Haptic";
-    "TAPTIC_HAPTIC_FEEDBACK" = "تحديد أين يعمل محرك النقر";
-    "TAPTIC_HAPTIC_FEEDBACK_FOOTER" = "• اختر أين تريد أن يعمل محرك النقر في جميع أزرار لوحة المفاتيح أو فقط في أزرار Shortmoji .";
+    "FEEDBACK_TYPE" = "نوع ردة فعل الإهتزاز";
+    "TAPTIC_ENGINE" = "محرك الإهتزاز Taptic";
+    "HAPTIC_ENGINE" = "محرك الإهتزاز Haptic";
+    "TAPTIC_HAPTIC_FEEDBACK" = "تحديد أين يعمل محرك الإهتزاز";
+    "TAPTIC_HAPTIC_FEEDBACK_FOOTER" = "• اختر أين تريد أن يعمل محرك الإهتزاز في جميع أزرار لوحة المفاتيح أو فقط في أزرار Shortmoji .";
     "ALL_KEYBOARD" = "كل لوحة المفاتيح";
     "ONLY_SHORTMOJI_BUTTONS" = "فقط لأزرار Shortmoji";
     "DOUBLE_TAP_SENSITIVITY" = "حساسية الضغط لمرتين";
     "DOUBLE_TAP_SENSITIVITY_FOOTER" = "• حرك شريط التمرير للتحكم في حساسية الضغط لمرتين.\n• القيمة الإفتراضية = ٠.٢٣";
     "SENSITIVITY" = "الحساسية";
     "LONG_PRESS_DELAY" = "تأخير الضغط المطول";
-    "LONG_PRESS_DELAY_FOOTER" = "• حرك شريط التمرير للتحكم في مهلة الضغط المطول.\n• القيمة الافتراضية = -.٥";
+    "LONG_PRESS_DELAY_FOOTER" = "• حرك شريط التمرير للتحكم في مهلة الضغط المطول.\n• القيمة الافتراضية = ٠.٥";
     "DELAY" = "تأخير";
-    "HAPTIC_TYPE" = "نوع النقر";
+    "HAPTIC_TYPE" = "نوع الإهتزاز";
     "NONE" = "لا شيء";
     "LIGHT" = "خفيف";
     "MEDIUM" = "متوسط";
@@ -194,10 +194,31 @@
     "SOFT" = "ناعم";
     "RIGID" = "جامد";
     "STRONG" = "قوي";
-    "TAPTIC_TYPE" = "نوع النقر";
+    "TAPTIC_TYPE" = "نوع الإهتزاز";
     "CREDIT" = "شكر خاص";
     "CREDIT_HEADER" = "تمت الترجمة بواسطة:";
     "CREDIT_FOOTER" = "هذه الأداة هي نسخة محدثة من اداة Barmoji ، شكر خاص الى المطور الأساسي CP Digital Darkroom وشكر خاص أيضاً الى NSExceptional و p2kdev على المساهمة في عمل Barmoji.";
-
+    "Select All & Copy" = "نسخ الكل";
+    "Select All & Paste" = "تحديد الكل ولصق";
+    "Select All & Cut" = "قص  الكل";
+    "Select All & Delete" = "مسح الكل";
+    "Select All & Capitalized" = "تحديد الكل وتكبير أول حرف";
+    "Select All & Uppercase" = "تكبير كل الحروف";
+    "Select All & Lowercase" = "تصغير كل الحروف";
+    "Select All & Translate" = "ترجمة الكل";
+    "CHOOSE_DEST_LANG" = "اختر اللغة التي تريد الترجمة إليها:";
+    "Swap Language" = "تبديل اللغة";
+    "Insert Text" = "إدراج نص";
+    "Dismiss" = "إلغاء";
+    "OK" = "حسنا";
+    "CONNECTION_ERROR" = "خطأ في الإتصال.";
+    "ERROR_GETTING_TRANSLATIONS" = "خطأ في الحصول على الترجمة.";
+    "Show Selection Commands" = "إظهار أوامر التحديد";
+    "Start Selection" = "بدء التحديد";
+    "End Selection" = "إنهاء التحديد";
+    "Normal Keyboard" = "لوحة المفاتيح الإعتيادية";
+    "Select All & Share" = "تحديد الكل و مشاركة";
+    "TRANSLATE_ALERT_SETTINGS" = "إعدادات خيارات الترجمة للإشعار المنبثق";
+    "TRANSLATE_ALERT_FOOTER" = "• اختر الأزرار التي تريد أن تظهر في خيارات الترجمة بإشعار منبثق.";
 }
 
