--- a/ar.lproj/Main.strings
+++ b/ar.lproj/Main.strings
@@ -109,15 +109,15 @@
     "HIDE_TEXT_BUTTON_KEY_CAPS" = "إخفاء أغطية المفاتيح لأزرار النص";
     "LONG_PRESS" = "الضغط المطول";
     "CUSTOM_ACTIONS" = "حركات مخصصة";
-    "CUSTOM_LONG_PRESS_ACTIONS" = "حركات مخصصة للضغط المطول";
+    "CUSTOM_LONG_PRESS_ACTIONS" = "إجرائات مخصصة للضغط المطول";
     "INSERT_TEXT_SHORTCUT" = "إدراج نص مختصر";
     "INSERT_TEXT_SHORTCUT_FOOTER" = "• أدخل أي نص ليستخدم مع اختصار \"إدراج النص\" ";
     "INSERT_TEXT" = "أدخل النص:";
     "PASTE_SHORTCUT" = "إختصار اللصق";
     "PASTE_AND_GO_IN_SAFARI" = "إلصق و إذهب في متصفح السفاري";
-    "LONG_PRESS_FUNC_HEADER" = "الوظائف الإفتراضية للضغط المطول لكل إختصار:";
+    "LONG_PRESS_FUNC_HEADER" = "الإجرائات الإفتراضية للضغط المطول لكل إختصار:";
     "LONG_PRESS_FUNC_FOOTER" = "• تبديل شريط التنبؤ: تبديل الشريط السفلي.\n• تبديل الشريط السفلي: تبديل شريط التنبؤ.\n• الترجمة: عكس اللغة.\n• كل اللغات: لغات مفضلة.\n• لغات مفضلة : كل اللغات.\n• نسخ: نسخ كل النص.\n• لصق: مسح الكل و لصق.\n• قص: قص كل النص.\n• تحديد: تحديد الكل.\n• حدد الكل: تحديد اخر كلمة.\n• حذف: حذف الكل.\n• تراجع: إستعادة.\n• إستعادة: تراجع.\n• تكبير أول حرف: تحديد الكل وتكبير لأول حرف.\n• الأحرف الكبيرة: حدد الكل وتكبير الحروف.\n• أحرف صغيرة: حدد الكل وتصغير للحروف.\n• إغلاق لوحة المفاتيح: تبديل اللغة.\n• اللغة: Emojis لوحة مفاتيح الرموز التعبيرية.\n• الرموز التعبيرية: تبديل اللغة.\n• بداية السطر: بداية المستند.\n• نهاية السطر: نهاية المستند.\n• بداية المستند: نهاية السطر.\n• نهاية المستند: بداية السطر.\n• تحريك المؤشر لأسفل: تحريك المؤشر لأعلى.\n• تحريك المؤشر لأعلى: تحريك المؤشر لأسفل.\n• تحريك المؤشر لليسار: تحريك المؤشر لليمين.\n• تحريك المؤشر لليمين: تحريك المؤشر لليسار.\n• الكلمة السابقة: الكلمة التالية.\n• الكلمة التالية: الكلمة السابقة.\n• إتجاه النص من اليمين لليسار: إتجاه النص من اليسار لليمين.\n• إتجاه النص من اليسار لليمين: إتجاه النص من اليمين لليسار.\n• مشاركة: تحديد الكل ومشاركة.\n\n";
-    "LONG_PRESS_ACTION" = "حركة الضغط المطول";
+    "LONG_PRESS_ACTION" = "إجراء الضغط المطول";
     "KEYBOARD_SHORTCUTS" = "إختصارات لوحة المفاتيح";
     "TIPS_HEADER" = "نصائح:";
     "KEYBOARD_SHORTCUTS_TIPS_FOOTER" = "• الضغط المطول على أي مفتاح من لوحة المفاتيح لتنشيط أي من هذه الإختصارات.\n• يمكنك إستخدام أكثر من حرف لأكثر من لغة لتنشيط نفس الإختصار، مثال: إذا استخدمت \"ن س\" في \"النسخ\" بالتالي إختصار النسخ سيتم بالضغط المطول على كل من حرف \"ن\" او \"س\".\n";
@@ -221,4 +221,3 @@
     "TRANSLATE_ALERT_SETTINGS" = "إعدادات خيارات الترجمة للإشعار المنبثق";
     "TRANSLATE_ALERT_FOOTER" = "• اختر الأزرار التي تريد أن تظهر في خيارات الترجمة بإشعار منبثق.";
 }
-
